--- a/REMTYS/tramites/templates/base.html
+++ b/REMTYS/tramites/templates/base.html
@@ -67,15 +67,15 @@
             </div>
         </div>
 
-        <div class="footer-column">
-            <h3 class="footer-title">Atizapán de Zaragoza</h3>
-            <ul class="footer-links">
-                <li class="footer-link"><a href="#">Acerca del municipio</a></li>
-                <li class="footer-link"><a href="#">Directorio</a></li>
-                <li class="footer-link"><a href="#">Transparencia</a></li>
-                <li class="footer-link"><a href="#">Contacto</a></li>
-            </ul>
-        </div>
+<div class="footer-column">
+    <h3 class="footer-title">Atizapán de Zaragoza</h3>
+    <ul class="footer-links">
+        <li class="footer-link"><a href="https://atizapan.gob.mx/">Acerca del municipio</a></li>
+        <li class="footer-link"><a href="https://atizapan.gob.mx/directores/">Directorio</a></li>
+        <li class="footer-link"><a href="https://atizapan.gob.mx/transparencia/">Transparencia</a></li>
+        <li class="footer-link"><a href="https://atizapan.gob.mx/contacto/">Contacto</a></li>
+    </ul>
+</div>
 
         <div class="footer-column">
 
