--- a/tramites/templates/base.html
+++ b/tramites/templates/base.html
@@ -87,10 +87,10 @@
         <div class="footer-column">
             <h3 class="footer-title">Contáctanos</h3>
             <ul class="footer-links">
-                <li class="footer-link"><i class="fas fa-map-marker-alt"></i> Blvd. Adolfo López Mateos, Atizapán</li>
-                <li class="footer-link"><i class="fas fa-phone"></i> (55) 1234-5678</li>
-                <li class="footer-link"><i class="fas fa-envelope"></i> contacto@atizapan.gob.mx</li>
-                <li class="footer-link"><i class="fas fa-clock"></i> Lun-Vie: 9:00 - 17:00</li>
+                <li class="footer-link"><i class="fas fa-map-marker-alt"></i> Blvd. Adolfo Lopez Mateos 91, 52987 El Potrero, Méx.</li>
+                <li class="footer-link"><i class="fas fa-phone"></i> (+52) 5536222800</li>
+                <li class="footer-link"><i class="fas fa-envelope"></i>Contactate con: atencionciudadana@atizapan.gob.mx</li>
+                <li class="footer-link"><i class="fas fa-clock"></i> Lun-Vie: 9:00 - 18:00</li>
             </ul>
         </div>
     </div>
