--- a/tramites/templates/base.html
+++ b/tramites/templates/base.html
@@ -20,13 +20,12 @@
 
     <!-- Header top bar -->
  <div class="location-btn header-left" onclick="window.open('https://www.google.com/maps/place/H.+Ayuntamiento+de+Atizap%C3%A1n+de+Zaragoza/@19.5430352,-99.2377901,17z/data=!3m1!4b1!4m6!3m5!1s0x85d21cdf76755031:0x1c3dbcc6e31e77eb!8m2!3d19.5430302!4d-99.2352152!16s%2Fg%2F1thcn3f0?entry=ttu&g_ep=EgoyMDI1MDUyOC4wIKXMDSoASAFQAw%3D%3D', '_blank')">
-    <i class="fas fa-map-marker-alt"></i>
-    Ubicación
+    ㅤㅤ<i class="fas fa-map-marker-alt"></i>ㅤㅤ
 </div>
     <div class="social-icons header-right">
         <a href="https://www.facebook.com/GobAtizapan?locale=es_LA" class="social-icon"><i class="fab fa-facebook-f"></i></a>
         <a href="https://www.instagram.com/atizapan_de_zaragoza/" class="social-icon"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.instagram.com/atizapan_de_zaragoza/" class="social-icon"><i class="fab fa-x"></i></a>
+        <a href="https://x.com/Atizapan_Z" class="social-icon"><i class="fab fa-x"></i></a>
         <a href="https://www.youtube.com/@GobAtizapan" class="social-icon"><i class="fab fa-youtube"></i></a>
     </div>
 
