--- a/tramites/templates/base.html
+++ b/tramites/templates/base.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="{% static 'imagenes/favicon.png' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="{% static 'tabla.css' %}"> 
+    <link rel="stylesheet" href="{% static 'protesta.css' %}"> 
     <script src="{% static 'table.js' %}"></script>
  <!-- Header top bar   <script src="{% static 'seguridad.js' %}"></script>--> 
     <link rel="stylesheet" href="{% static 'tablastramites.css' %}"> 
